--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:i7biOr3oNDDD0r7yunAMn3oVFzy2qSu37+EQc1LSVHE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=db
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=securerootpassword
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,3 +42,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+UID=1000
